--- a/css/styles.css
+++ b/css/styles.css
@@ -712,6 +712,10 @@ a:focus .icon__customer {
   border-radius: 4px;
 }
 
+.frm-service__lbl > input:focus {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
 .frm-service__lbl > textarea {
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
